@@ -1,0 +1,9 @@
+# ResourceBundle properties file for distcp counters
+
+CounterGroupName=       distcp
+
+COPY.name=              Files copied
+SKIP.name=              Files skipped
+FAIL.name=              Files failed
+BYTESCOPIED.name=       Bytes copied
+BYTESEXPECTED.name=     Bytes expected
